<resources>
    <string name="app_name">SportsOptionR</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="name">Vivek Sabbarwal</string>
    <string name="tempAddr">vivekwasn21@unb.ca</string>
    <string name="menu_home">Profile</string>
    <string name="menu_gallery">Sell</string>
    <string name="menu_slideshow">Buy</string>
    <string name="menu_tools">Stats</string>
    <string name="menu_YO">Your Options</string>

    <string name="validate">Validate Pass</string>
    <string name="SellO">Sell Option</string>
    <string name="save">Save</string>

    <string name="login">Login</string>
    <string name="Register">Sign Up</string>

    <string name="Email">Email Address</string>
    <string name="Password">Password</string>
    <string name="FirstN">First Name</string>
    <string name="LastN">Last Name</string>
    <string name="Phone">Phone Number</string>

    <string name="Price">Price</string>
    <string name="TicketNum">Ticket Number</string>
    <string name="Date">Date</string>
    <string name="teamH">Date of Game: </string>
    <string name="OriginalOwner">Your Full Name</string>

    <string name="logout">Logout</string>
</resources>
