<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_buy">

    <fragment
        android:id="@+id/nav_profile"
        android:name="ca.unb.sportsoptionr.ui.profile.Profile"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_sell"
        android:name="ca.unb.sportsoptionr.ui.sell.Sell"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_sell" />

    <fragment
        android:id="@+id/nav_buy"
        android:name="ca.unb.sportsoptionr.ui.buy.Buy"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_buy" />

    <fragment
        android:id="@+id/nav_stats"
        android:name="ca.unb.sportsoptionr.ui.stats.Stats"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_stats" />
    <fragment
        android:id="@+id/nav_yourOp"
        android:name="ca.unb.sportsoptionr.ui.yourOptions"
        android:label="@string/menu_YO"
        tools:layout="@layout/fragment_yoptions" />

</navigation>