<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_outline_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_sell"
            android:icon="@drawable/ic_attach_money_black_24dp"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_buy"
            android:icon="@drawable/ic_add_shopping_cart_black_24dp"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_timeline_black_24dp"
            android:title="@string/menu_tools" />
    </group>

</menu>
